--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.1",
     "node-sass": "^6.0.1",
-    "postcss-loader": "^6.1.1",
+    "postcss": "^8.4.18",
+    "postcss-loader": "^7.0.1",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.1.0",
@@ -55,6 +56,7 @@
   "dependencies": {
     "core-js": "^3.18.2",
     "gsap": "^3.8.0",
+    "nosleep.js": "^0.12.0",
     "regenerator-runtime": "^0.13.9",
     "vue": "^2.6.14",
     "vue-js-modal": "^2.0.1",
