--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --history-api-fallback --open-app-name firefox --config ./webpack.dev.conf.js",
-    "build": "webpack --config ./webpack.build.conf.js"
+    "build": "webpack --config ./webpack.build.conf.js",
+    "deploy": "node deploy"
   },
   "browserslist": [
     "> 1%",
@@ -35,6 +36,7 @@
     "css-mqpacker": "^7.0.0",
     "cssnano": "^5.0.8",
     "file-loader": "^6.2.0",
+    "ftp-deploy": "^2.4.3",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.1",
     "node-sass": "^6.0.1",
