--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,7 @@
 {
-  "include": [
-      "./src/**/*"
-    ],
+  "include": ["./src/**/*"],
   "vueCompilerOptions": {
-    "plugins": [
-      "@volar/vue-language-plugin-pug"
-    ]
+    "plugins": ["@volar/vue-language-plugin-pug"],
+    "target": 2
   }
 }
