--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.15.8",
     "@volar-plugins/vetur": "latest",
     "@volar/vue-language-plugin-pug": "^1.0.12",
+    "@vue/compiler-dom": "^3.2.45",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
@@ -52,15 +53,16 @@
     "vue-loader": "^15.9.8",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.57.1",
-    "webpack-cli": "^4.9.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.3.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "memfs": "^3.4.12"
   },
   "dependencies": {
+    "@uriopass/nosleep.js": "^0.12.2",
     "core-js": "^3.18.2",
     "gsap": "^3.8.0",
-    "nosleep.js": "^0.12.0",
     "regenerator-runtime": "^0.13.9",
     "vue": "^2.6.14",
     "vue-js-modal": "^2.0.1",
